Fixed colours in Dark Mode

--- a/style.css
+++ b/style.css
@@ -492,13 +492,19 @@ a {
 		background: var(--dark);
 		/*background:url("resources/background-dark.jpg");*/
 	}
+	.header p {
+		color: var(--light);
+	}
+	.header h1 {
+		color: var(--light);
+	}
 	.top {
 		background-color: var(--dark);
-		color: var(--nice-white);
-		border: var(--nice-white) solid 1px;
+		color: var(--light);
+		border: var(--light) solid 1px;
 	}
 	.top:hover {
-		background-color: var(--nice-white);
+		background-color: var(--light);
 		color: var(--dark);
 		border: var(--dark) solid 1px;
 	}
